--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -119,16 +119,11 @@
     <ItemGroup>
         <Compile Include="Configuration\Config.cs" />
         <Compile Include="DeathrunInit.cs" />
+        <Compile Include="Objects\Enums\Difficulty.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\SubnauticaCommons\SubnauticaCommons\SubnauticaCommons.csproj">
-        <Project>{d3b5597c-3e59-4503-9026-17d34e5f2aa3}</Project>
-        <Name>SubnauticaCommons</Name>
-      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -138,6 +133,7 @@
       <Error Condition="!Exists('..\packages\BepInEx.Core.5.4.21\build\BepInEx.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\BepInEx.Core.5.4.21\build\BepInEx.Core.targets'))" />
     </Target>
     <Import Project="..\packages\BepInEx.Core.5.4.21\build\BepInEx.Core.targets" Condition="Exists('..\packages\BepInEx.Core.5.4.21\build\BepInEx.Core.targets')" />
+    <Import Project="..\SubnauticaCommons\SubnauticaCommons\SubnauticaCommons.projitems" Label="Shared" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
