--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -128,8 +128,11 @@
     <ItemGroup>
         <Compile Include="Configuration\Config.cs" />
         <Compile Include="Configuration\ConfigUtils.cs" />
+        <Compile Include="Constants.cs" />
         <Compile Include="DeathrunInit.cs" />
-        <Compile Include="GameStartHandler.cs" />
+        <Compile Include="Handlers\GameStartHandler.cs" />
+        <Compile Include="Handlers\HighscoreHandler.cs" />
+        <Compile Include="Handlers\NotificationHandler.cs" />
         <Compile Include="Items\AcidBattery.cs" />
         <Compile Include="Items\AcidPowerCell.cs" />
         <Compile Include="Items\DeathrunPrefabBase.cs" />
@@ -140,11 +143,12 @@
         <Compile Include="Items\Suit.cs" />
         <Compile Include="Items\Tank.cs" />
         <Compile Include="Monos\DeathrunTank.cs" />
-        <Compile Include="Notifications.cs" />
         <Compile Include="Objects\Enums\Difficulty.cs" />
         <Compile Include="Objects\Exceptions\DeathrunException.cs" />
         <Compile Include="Patches\AirPatcher.cs" />
         <Compile Include="Patches\BatteryPatcher.cs" />
+        <Compile Include="Patches\CompassPatcher.cs" />
+        <Compile Include="Patches\SuitPatcher.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
