Implement personal crush depth.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -116,6 +116,7 @@
         <Compile Include="Constants.cs" />
         <Compile Include="DeathrunInit.cs" />
         <Compile Include="DeathrunUtils.cs" />
+        <Compile Include="Handlers\CrushDepthHandler.cs" />
         <Compile Include="Handlers\GameEventHandler.cs" />
         <Compile Include="Handlers\HighscoreHandler.cs" />
         <Compile Include="Handlers\NitrogenHandler.cs" />
