Implement power loss on vehicle exit.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -123,6 +123,7 @@
         <Compile Include="Handlers\HighscoreHandler.cs" />
         <Compile Include="Handlers\NitrogenHandler.cs" />
         <Compile Include="Handlers\NotificationHandler.cs" />
+        <Compile Include="Handlers\TutorialHandler.cs" />
         <Compile Include="Items\AcidBattery.cs" />
         <Compile Include="Items\AcidPowerCell.cs" />
         <Compile Include="Items\DeathrunPrefabBase.cs" />
@@ -136,6 +137,7 @@
         <Compile Include="Items\VanillaRecipeChanges.cs" />
         <Compile Include="Objects\Enums\Difficulty.cs" />
         <Compile Include="Objects\Enums\SafeDepthStatus.cs" />
+        <Compile Include="Objects\Enums\Tutorial.cs" />
         <Compile Include="Objects\Enums\Warning.cs" />
         <Compile Include="Objects\Exceptions\DeathrunException.cs" />
         <Compile Include="Objects\Message.cs" />
