--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -152,6 +152,7 @@
         <Compile Include="Patches\EscapePodPatcher.cs" />
         <Compile Include="Patches\ExplosionPatcher.cs" />
         <Compile Include="Patches\FarmingChallengePatcher.cs" />
+        <Compile Include="Patches\FoodChallengePatcher.cs" />
         <Compile Include="Patches\PowerPatcher.cs" />
         <Compile Include="Patches\RadiationPatcher.cs" />
         <Compile Include="Patches\SuitPatcher.cs" />
