Implement pacifist challenge.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -153,6 +153,7 @@
         <Compile Include="Patches\ExplosionPatcher.cs" />
         <Compile Include="Patches\FarmingChallengePatcher.cs" />
         <Compile Include="Patches\FoodChallengePatcher.cs" />
+        <Compile Include="Patches\PacifistPatcher.cs" />
         <Compile Include="Patches\PowerPatcher.cs" />
         <Compile Include="Patches\RadiationPatcher.cs" />
         <Compile Include="Patches\SuitPatcher.cs" />
