--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -114,6 +114,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Components\RunStatsTracker.cs" />
         <Compile Include="Components\RunStatsUI\ButtonEventTrigger.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsWindow.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsRow.cs" />
@@ -126,7 +127,7 @@
         <Compile Include="DeathrunUtils.cs" />
         <Compile Include="Handlers\CrushDepthHandler.cs" />
         <Compile Include="Handlers\GameEventHandler.cs" />
-        <Compile Include="Handlers\RunStatsHandler.cs" />
+        <Compile Include="Handlers\ScoreHandler.cs" />
         <Compile Include="Handlers\NitrogenHandler.cs" />
         <Compile Include="Handlers\NotificationHandler.cs" />
         <Compile Include="Handlers\TutorialHandler.cs" />
