--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -127,6 +127,7 @@
         <Compile Include="DeathrunUtils.cs" />
         <Compile Include="Handlers\CrushDepthHandler.cs" />
         <Compile Include="Handlers\GameEventHandler.cs" />
+        <Compile Include="Handlers\RunHandler.cs" />
         <Compile Include="Handlers\ScoreHandler.cs" />
         <Compile Include="Handlers\NitrogenHandler.cs" />
         <Compile Include="Handlers\NotificationHandler.cs" />
