--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -126,6 +126,7 @@
         <Compile Include="DeathrunInit.cs" />
         <Compile Include="DeathrunUtils.cs" />
         <Compile Include="Handlers\CrushDepthHandler.cs" />
+        <Compile Include="Handlers\EncyclopediaHandler.cs" />
         <Compile Include="Handlers\GameEventHandler.cs" />
         <Compile Include="Handlers\RunHandler.cs" />
         <Compile Include="Handlers\ScoreHandler.cs" />
