Add escape pod info screen changes.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -114,6 +114,8 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Components\EscapePodRecharge.cs" />
+        <Compile Include="Components\EscapePodStatusScreen.cs" />
         <Compile Include="Components\RunStatsTracker.cs" />
         <Compile Include="Components\RunStatsUI\ButtonEventTrigger.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsWindow.cs" />
