--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -123,7 +123,6 @@
         <Compile Include="Components\SafeDepthHud.cs" />
         <Compile Include="Configuration\Config.cs" />
         <Compile Include="Configuration\ConfigSave.cs" />
-        <Compile Include="Configuration\ConfigUtils.cs" />
         <Compile Include="DeathrunInit.cs" />
         <Compile Include="DeathrunUtils.cs" />
         <Compile Include="Handlers\CrushDepthHandler.cs" />
@@ -135,6 +134,7 @@
         <Compile Include="Handlers\NotificationHandler.cs" />
         <Compile Include="Handlers\TooltipHandler.cs" />
         <Compile Include="Handlers\TutorialHandler.cs" />
+        <Compile Include="Handlers\WarningHandler.cs" />
         <Compile Include="Items\AcidBattery.cs" />
         <Compile Include="Items\AcidPowerCell.cs" />
         <Compile Include="Items\DeathrunPrefabBase.cs" />
@@ -151,7 +151,6 @@
         <Compile Include="Objects\Enums\RunAchievements.cs" />
         <Compile Include="Objects\Enums\SafeDepthStatus.cs" />
         <Compile Include="Objects\Enums\Tutorial.cs" />
-        <Compile Include="Objects\Enums\Warning.cs" />
         <Compile Include="Objects\Exceptions\DeathrunException.cs" />
         <Compile Include="Objects\LegacyStats.cs" />
         <Compile Include="Objects\Message.cs" />
@@ -159,6 +158,7 @@
         <Compile Include="Objects\RunStats.cs" />
         <Compile Include="Objects\SaveData.cs" />
         <Compile Include="Objects\StartLocation.cs" />
+        <Compile Include="Objects\Warning.cs" />
         <Compile Include="Patches\AggressionPatcher.cs" />
         <Compile Include="Patches\BreathingPatcher.cs" />
         <Compile Include="Patches\BatteryPatcher.cs" />
