--- a/DeathrunRemade/Assets.targets
+++ b/DeathrunRemade/Assets.targets
@@ -3,6 +3,7 @@
 <!-- Define important extra files needed in the final distribution. -->
     <ItemGroup>
         <Assets Include="Assets\*.json" />
+        <Assets Include="Assets\DeathrunStarts.csv" />
         <Assets Include="Assets\highscores" />
     </ItemGroup>
 </Project>
